# json_builtin

./: CMakeLists.txt  README.md  test.sh
.github/: copilot.md
examples/: showcase.sh
prompts/: prompts1.txt  prompts2.txt  prompts3.txt  prompts4.txt  prompts5.txt  prompts6.txt  prompts7.txt  todo:.md
src/: CMakeLists.txt  json.cpp
tests/: test_array_basic.sh  test_array_iterate.sh  test_array_with_objects.sh  test_assign_display.sh  test_assign_pointer.sh  test_basic.sh  test_complex_nested.sh  test_deep_nesting.sh  test_display_format.sh  test_errors.sh  test_file.sh  test_iterate_object.sh  test_iterate_pointers.sh  test_json5_comments.sh  test_json_merge_patch.sh  test_json_patch.sh  test_nested.sh  test_nested_arrays.sh  test_object_with_array.sh  test_pointer.sh  test_reassign.sh  test_selector_array.sh  test_selector_combined.sh  test_selector_errors.sh  test_selector_object.sh  test_serialize.sh  test_stdin.sh
